# GlobalSfMpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flags.txt  flags.yaml  flags_1dsfm.txt  flags_1dsfm.yaml  setup.py
bind_src/: GlobalSfMpy.cpp
datasets/Madrid_Metropolis/: EGs.txt  cc.txt  list.txt
datasets/facade/images/: README.md
include/: GSfM_global_reconstruction_estimator.hpp  GSfM_nonlinear_position_estimator.hpp  GSfM_nonlinear_rotation_estimator.hpp  GSfM_reconstruction_builder.hpp  command_line_helpers.h  compare_reconstructions.hpp  feature_inliers.hpp  gamma_values.cpp  pairwise_rotation_error_quat.hpp  pairwise_translation_error_covariance.hpp  read_colmap_posegraph.hpp  uncertainty.hpp
scripts/: colmapFeatureMatching.sh  colmap_database.py  get_covariance_from_colmap.py  loss_functions.py  read_colmap_database.py  sfm_pipeline.py  sfm_with_colmap_feature.py
src/: GSfM_global_reconstruction_estimator.cpp  GSfM_nonlinear_position_estimator.cpp  GSfM_nonlinear_rotation_estimator.cpp  GSfM_reconstruction_builder.cpp  compare_reconstructions.cpp  feature_inliers.cpp  pairwise_rotation_error.cpp  pairwise_translation_error_covariance.cpp  read_colmap_posegraph.cpp  read_data.cpp  uncertainty.cpp
